# un-xPass

./: .flake8  .gitignore  LICENSE.rst  README.md  noxfile.py  pyproject.toml  run_experiment.py
config/: config.yaml
config/dataset/euro2020/: test.yaml  train.yaml
config/experiment/pass_selection/: naive_baseline.yaml  soccermap.yaml  xgboost.yaml
config/experiment/pass_success/: event.yaml  intended_endlocation.yaml  naive_baseline.yaml  observed_endlocation.yaml  receiver_agnostic.yaml  soccermap.yaml  threesixty.yaml
config/experiment/pass_value/: expected_threat.yaml  soccermap_offensive_completed.yaml  vaep.yaml  vaep_xg.yaml  vaep_xg_360.yaml
config/hparams_search/: soccermap_optuna.yaml  xgboost_optuna.yaml
config/hydra/: default.yaml
config/model_cfg/: xgbclassifier.yaml  xgbregressor.yaml
config/train_cfg/: pytorch.yaml  pytorch_gpu.yaml  xgboost.yaml
docs/: unxpass.bibtex
notebooks/: 1-load-and-convert-statsbomb-data.ipynb  2-computing-and-storing-features.ipynb  3-training-models.ipynb  4-measuring-creativity.ipynb
tests/: __init__.py  conftest.py  test_databases.py  test_datasets.py  test_features.py  test_labels.py
unxpass/: __init__.py  __main__.py  config.py  datasets.py  features.py  labels.py  ratings.py  utils.py  visualization.py
unxpass/components/: __init__.py  base.py  pass_selection.py  pass_success.py  pass_value.py  soccermap.py  utils.py
unxpass/databases/: __init__.py  base.py  hdf.py  sqlite.py
